--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 <!-- Add your site or app content here -->
-<div class="background-image-container black-text-container" style="background-image: url('./assets/images/weddingphoto2.jpg')">
+<div class="background-image-container black-text-container" style="background-image: url('./weddingphoto2.jpg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
