--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </div>
 
 <div class="section-container section-half-background-image-container">
-    <div class="image-column" style="background-image: url('./assets/images/img-07.jpg')"></div>
+    <div class="image-column" style="background-image: url('./img-07.jpg')"></div>
     <div class="container">
         <div class="row">
             <div class="section-label reveal">
@@ -136,20 +136,20 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-4">
-                <img src="./assets/images/img-02.jpg" alt="" class="img-responsive">
+                <img src="./img-02.jpg" alt="" class="img-responsive">
                 <h3 class="text-center">Consectetur</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
                     lacus tellus. In pretium lobortis blandit.</p>
             </div>
 
             <div class="col-xs-12 col-md-4">
-                <img src="./assets/images/img-03.jpg" alt="" class="img-responsive">
+                <img src="./img-03.jpg" alt="" class="img-responsive">
                 <h3 class="text-center">Malesuada</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
                     lacus tellus. In pretium lobortis blandit.</p>
             </div>
             <div class="col-xs-12 col-md-4">
-                <img src="./assets/images/img-04.jpg" alt="" class="img-responsive">
+                <img src="./img-04.jpg" alt="" class="img-responsive">
                 <h3 class="text-center">Phasellus</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
                     lacus tellus. In pretium lobortis blandit.</p>
